[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Encounter/Encounter.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Characters/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://SFX/KeyPress.wav" type="AudioStream" id=3]
[ext_resource path="res://Prefabs/Countdown/Countdown.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/PolyphonyAudioPlayer.gd" type="Script" id=5]
[ext_resource path="res://TileSets/Beach.tres" type="TileSet" id=6]
[ext_resource path="res://Sprites/Background/Background-1.40pc.png" type="Texture" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Roboto-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/joystix.monospace.ttf"

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = SubResource( 3 )

[node name="Encounter" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 2.8999
margin_right = 1922.9
margin_bottom = 1080.0
color = Color( 0.690196, 0.866667, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Node2D" parent="."]

[node name="Background-140pc2" type="Sprite" parent="Background"]
position = Vector2( 1659.68, 82.1224 )
texture = ExtResource( 7 )

[node name="Background-140pc" type="Sprite" parent="Background"]
position = Vector2( 461.283, 233.644 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 7 )

[node name="Phrase" type="RichTextLabel" parent="."]
margin_top = 335.0
margin_right = 1920.0
margin_bottom = 512.0
rect_clip_content = false
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]IF YOU CAN SQUAT OUTSIDE IN
PROTEST, YOU CAN DO IT AT HOME[/center]"
text = "IF YOU CAN SQUAT OUTSIDE IN
PROTEST, YOU CAN DO IT AT HOME"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_left = 981.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 124.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0.352941, 0.180392, 0.0823529, 1 )
bbcode_enabled = true
bbcode_text = "[right]TIME REMAINING: [/right]"
text = "TIME REMAINING: "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TyposLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_left = 51.45
margin_top = 50.0
margin_right = 905.45
margin_bottom = 122.0
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0.352941, 0.180392, 0.0823529, 1 )
bbcode_enabled = true
bbcode_text = "0 TYPOS REMAINING"
text = "0 TYPOS REMAINING"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 277.232, 763.443 )
collision_layer = 0
collision_mask = 0
ignore_input = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -67.6467, 416.561 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 512, 512 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0 )

[node name="Countdown" parent="." instance=ExtResource( 4 )]
z_index = 99

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
script = ExtResource( 5 )

[node name="EnemyPlaceHolder" type="ColorRect" parent="."]
margin_left = 1542.77
margin_top = 763.443
margin_right = 1742.77
margin_bottom = 935.83
rect_pivot_offset = Vector2( 100, 0 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="Countdown" to="." method="_on_countdown_finished"]
